@@ -1,3 +1,11 @@
+2014-07-08  Trevor Saunders  <tsaunders@mozilla.com>
+
+	* graphite-htab.h: Use hash_map instead of hash_table.
+	* graphite-clast-to-gimple.c: Adjust.
+	* passes.c: Use hash_map instead of hash_table.
+	* sese.c: Likewise.
+	* sese.h: Remove now unused code.
+
 2014-07-08  Sriraman Tallam  <tmsriram@google.com>
 
 	PR target/61599
